# taskwarrior-frontend

./: .dockerignore  .gitignore  AGENTS.md  README.md  rustfmt.toml
.codex/: AGENTS.md
.github/workflows/: deploy.yml  flutter.yml  rust.yml
deploy/: backend.Dockerfile  backend.compose.toml  backend.example.toml  docker-compose.override.example.yaml  docker-compose.yaml  nginx.conf  web.Dockerfile
docs/: api.md  architecture.md  deployment.md  roadmap.md
flutter_app/: README.md  analysis_options.yaml  pubspec.yaml
flutter_app/integration_test/: app_shell_test.dart  shell_parity_test.dart  web_backend_smoke_test.dart
flutter_app/lib/: main.dart
flutter_app/lib/app/: app.dart  app_theme.dart  backend_configuration_store.dart  routes.dart  shell_controller.dart
flutter_app/lib/backend/: http_task_backend_client.dart  local_dev_backend_client.dart  task_backend_client.dart
flutter_app/lib/models/: shell_models.dart
flutter_app/lib/presentation/: taskwarrior_shell.dart
flutter_app/lib/presentation/screens/: board_screen.dart  dashboard_screen.dart  settings_screen.dart  task_detail_screen.dart  task_list_screen.dart
flutter_app/test/: backend_configuration_store_test.dart  http_task_backend_client_test.dart  widget_test.dart
flutter_app/tool/: run_android_backend_smoke.sh
rust/: Cargo.toml
rust/crates/core/: Cargo.toml
rust/crates/core/src/: lib.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: config.rs  error.rs  http_api.rs  lib.rs  main.rs  operations.rs  requests.rs  service.rs  storage.rs  sync.rs
rust/crates/server/tests/: external_taskchampion_sync.rs
rust/crates/taskwarrior_compat/: Cargo.toml
rust/crates/taskwarrior_compat/src/: codec.rs  config.rs  error.rs  lib.rs  properties.rs  store.rs
rust/crates/taskwarrior_core/: Cargo.toml
(+4 files in other folders)
