[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = [
  "clock",
  "std",
] }
taskwarrior_core = { path = "../taskwarrior_core" }
taskwarrior_compat = { path = "../taskwarrior_compat" }
uuid = { version = "1.18.1", features = ["std"] }

[lib]
path = "src/lib.rs"
