[package]
name = "taskwarrior_compat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
taskwarrior_core = { path = "../taskwarrior_core" }
taskchampion = { version = "3.0.1", default-features = false, features = [
  "bundled",
  "server-local",
  "server-sync",
  "storage-sqlite",
  "tls-webpki-roots",
] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
